# pos-mirror

./: Cargo.toml  Makefile  README.md  docker-compose.yml  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241124_151358_create_admin_users_table.rs  m20241124_151359_create_users_table.rs  m20241128_120615_create_resources_table.rs  m20241128_121404_create_roles_table.rs  m20241128_121428_create_permissions_table.rs  m20241129_072550_create_role_permissions_table.rs  m20241129_072555_create_admin_user_permissions_table.rs  m20241129_072555_create_user_permissions_table.rs
src/entities/: admin_user.rs  admin_user_permission.rs  mod.rs  permission.rs  prelude.rs  resource.rs  role.rs  role_permission.rs  user_permission.rs
src/seeders/: admin_user_seeder.rs  mod.rs  resource_seeder.rs  user_seeder.rs
src/seeders/seeds/: permissions.json  resources.json  role_permissions.json  roles.json
src/services/: mod.rs
src/services/auth/: mod.rs
src/services/items/: handlers.rs  mod.rs
