[package]
name = "bazeik_pos_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
async-trait = "0.1"
sea-orm-migration = { version = "1.1.1", features = ["sqlx-postgres"] }
argon2 = "0.5.3"
clap = { version = "4.1", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typenum = "1.15"
openssl-sys = "0.9"

[[bin]]
name = "pos_backend"
path = "src/main.rs"
